<resources>
    <string name="app_name">뭐 입을까?</string>

    <!--    Bottom navigation-->
    <string name="weather_fragment">날씨</string>
    <string name="recommend_clothes_fragment">추천 옷</string>
    <string name="my_closet_fragment">내 옷장</string>
    <string name="my_style_fragment">내 스타일</string>

    <!--    Weather Data-->
    <string name="not_data">데이터 없음</string>
    <string name="splash_name1">Today\'s</string>
    <string name="splash_name2">Clothes</string>
    <string name="splash_name3">오늘 날씨 어때? 뭐 입지?</string>
    <string name="splash_name4">출처: 앱에 사용된 이미지의 출처는 무신사에 있음을 알림.</string>
</resources>