<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/weather_fragment"
        android:enabled="true"
        android:icon="@drawable/iweather"
        android:title="@string/weather_fragment" />

    <item
        android:id="@+id/recommend_clothes_fragment"
        android:enabled="true"
        android:icon="@drawable/clothes60"
        android:title="@string/recommend_clothes_fragment" />

    <item
        android:id="@+id/my_closet_fragment"
        android:enabled="true"
        android:icon="@drawable/closet48"
        android:title="@string/my_closet_fragment" />

    <item
        android:id="@+id/my_style_fragment"
        android:enabled="true"
        android:icon="@drawable/circle"
        android:title="@string/my_style_fragment" />
</menu>